运用毕加索 加载网络图片 问题依旧不能加载 应该是服务器端的问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
     tools:context=".main.MainActivity">
 
     <TextView
+        android:id="@+id/iv_welco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        />
 </RelativeLayout>
